Updated policy checkboxes in SignUpDialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -17,6 +17,7 @@
   "add-me-friends": "Add me to friends",
   "addons-changed-conflict": "List of add-ons has been changed.",
   "advanced-options": "Advanced options",
+  "agree-to-sheriff-oversight": "I agree to <0>Sheriff oversight</0>",
   "alert-text": "Alert text",
   "align": "Align",
   "all": "All",
@@ -206,7 +207,7 @@
   "dont-have-account": "Don't have an account?",
   "dont-recommend": "Do not recommend",
   "dont-recommend-user": "Do not recommend posts by <b>{name}</b> anymore?",
-  "do-want-allow-android-google-play": "<0>Do you want your blog to be accessible with Moera for Android app installed from Google Play?</0> To do this, you must allow the sheriff to read the contents of your blog and decide (in accordance with Google Play rules) which posts or comments should be hidden in Moera for Android.",
+  "do-want-allow-android-google-play": "<0>Do you want non-public content of your blog to be accessible with Moera for Android app installed from Google Play?</0> For this, you need to allow the Sheriff to read the non-public contents of your blog and decide (in accordance with Google Play rules) which posts or comments should be hidden in Moera for Android.",
   "download": "Download",
   "downloading-image": "Downloading image...",
   "do-you-have-blog": "Do you have a Moera blog?",
@@ -616,7 +617,7 @@
     "wow": "Wow",
     "wrong": "Wrong"
   },
-  "read-and-agree-with": "I read and agree with",
+  "read-and-agree-to-terms": "I have read and agree to the <0>Terms and Conditions</0> and <1>Sheriff Policy</1>",
   "read-more": "Read more...",
   "reason": "Reason",
   "recommendations": "Recommendations",
@@ -989,7 +990,6 @@
   "superscript": "Superscript",
   "support": "Support",
   "switch-accounts": "Switch accounts",
-  "terms-and-conditions": "Terms and Conditions",
   "text": "Text",
   "text-contains-formatting": "The text contains formatting. Do you want to copy the text with formatting tags?",
   "text-copied": "Text copied to the clipboard",
@@ -1096,7 +1096,6 @@
   "view-source-title": "View Source",
   "visibility": "Visibility",
   "visits": "{count} {count, plural, one {visit} other {visits}}",
-  "want-allow-android-google-play": "I want my blog to be accessible with Moera for Android app installed from Google Play. I allow the sheriff to read the content of my blog and decide (according to the rules), which posts or comments are to be hidden in Moera for Android",
   "want-delete-addon": "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft": "Do you really want to delete the draft?",
   "want-delete-token": "Do you really want to delete the token \"{name}\"?",
