--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -17,6 +17,7 @@
   "add-me-friends": "Dodaj mnie do znajomych",
   "addons-changed-conflict": "Lista dodatków została zmieniona.",
   "advanced-options": "Opcje zaawansowane",
+  "agree-to-sheriff-oversight": "Zgadzam się na <0>nadzór Szeryfa</0>",
   "alert-text": "Tekst alertu",
   "align": "Wyrównaj",
   "all": "Wszystko",
@@ -206,7 +207,7 @@
   "dont-have-account": "Nie masz konta?",
   "dont-recommend": "Nie polecaj",
   "dont-recommend-user": "Nie polecaj już postów <b>{name}</b>?",
-  "do-want-allow-android-google-play": "<0>Czy chcesz, aby Twój blog był dostępny dzięki aplikacji Moera na Androida zainstalowanej z Google Play?</0> Aby to zrobić, musisz pozwolić szeryfowi na odczytanie zawartości twojego bloga i decydowanie (zgodnie z zasadami Google Play), które posty lub komentarze powinny być ukryte w Moera dla Androida.",
+  "do-want-allow-android-google-play": "<0>Czy chcesz, aby niepubliczna treść Twojego bloga była dostępna w aplikacji Moera na Androida, zainstalowanej z Google Play?</0> W tym celu musisz pozwolić Szeryfowi na odczytywanie niepublicznych treści Twojego bloga i decydowanie (zgodnie z zasadami Google Play), które posty lub komentarze powinny być ukryte w Moera na Androida.",
   "download": "Pobierz",
   "downloading-image": "Pobieranie obrazu...",
   "do-you-have-blog": "Czy masz bloga Moera?",
@@ -616,7 +617,7 @@
     "wow": "Wow",
     "wrong": "Błędny"
   },
-  "read-and-agree-with": "Przeczytałem/am i zgadzam się z",
+  "read-and-agree-to-terms": "Przeczytałem i zgadzam się z <0>Regulaminem</0> oraz <1>Zasadami Szeryfa</1>",
   "read-more": "Czytaj więcej...",
   "reason": "Powód",
   "recommendations": "Rekomendacje",
@@ -989,7 +990,6 @@
   "superscript": "Indeks górny",
   "support": "Wsparcie",
   "switch-accounts": "Przełącz konta",
-  "terms-and-conditions": "Warunki i zasady",
   "text": "Tekst",
   "text-contains-formatting": "Tekst zawiera formatowanie. Czy chcesz skopiować tekst wraz z tagami formatującymi?",
   "text-copied": "Tekst skopiowany do schowka",
@@ -1096,7 +1096,6 @@
   "view-source-title": "Wyświetl źródło",
   "visibility": "Widoczność",
   "visits": "{count} {count, plural, one {wizyta} few {wizyty} other {wizyt}}",
-  "want-allow-android-google-play": "Chciałbym, aby mój blog był widoczny w aplikacji Moera na Androida zainstalowanej z Google Play. Zezwalam szeryfowi na zapoznanie się z treścią mojego bloga i decydowanie (zgodnie z zasadami), które posty lub komentarze mają być ukryte w Moera na Androida",
   "want-delete-addon": "Czy na pewno chcesz usunąć dodatek \"{name}\"?",
   "want-delete-draft": "Czy na pewno chcesz usunąć szkic?",
   "want-delete-token": "Czy na pewno chcesz usunąć token \"{name}\"?",
