--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -17,6 +17,7 @@
   "add-me-friends": "Добавить меня в друзья",
   "addons-changed-conflict": "Список дополнений был изменён.",
   "advanced-options": "Расширенные возможности",
+  "agree-to-sheriff-oversight": "Я согласен на <0>надзор Шерифа</0>",
   "alert-text": "Текст предупреждения",
   "align": "Выравнивание",
   "all": "Все",
@@ -206,7 +207,7 @@
   "dont-have-account": "Нет аккаунта?",
   "dont-recommend": "Не рекомендовать",
   "dont-recommend-user": "Не рекомендовать больше посты <b>{name}</b>?",
-  "do-want-allow-android-google-play": "<0>Вы хотите, чтобы ваш блог был виден в приложении Moera для Android, установленном из Google Play?</0> Для этого вы должны разрешить шерифу читать содержимое вашего блога и решать (в соответствии с правилами Google Play), какие посты или комментарии следует скрыть в Moera для Android.",
+  "do-want-allow-android-google-play": "<0>Вы хотите, чтобы непубличный контент вашего блога был доступен в приложении Moera для Android, установленном из Google Play?</0> Для этого вам нужно разрешить Шерифу читать непубличный контент вашего блога и решать (в соответствии с правилами Google Play), какие посты или комментарии должны быть скрыты в Moera для Android.",
   "download": "Скачать",
   "downloading-image": "Скачивание картинки...",
   "do-you-have-blog": "У вас есть блог на Moera?",
@@ -616,7 +617,7 @@
     "wow": "Ого",
     "wrong": "Неверно"
   },
-  "read-and-agree-with": "Я прочёл и согласен с",
+  "read-and-agree-to-terms": "Я прочел и согласен с <0>Правилами использования</0> и <1>Правилами шерифа</1>",
   "read-more": "Читать дальше...",
   "reason": "Причина",
   "recommendations": "Рекомендации",
@@ -989,7 +990,6 @@
   "superscript": "Надстрочный знак",
   "support": "Одобряю",
   "switch-accounts": "Сменить аккаунт",
-  "terms-and-conditions": "Правилами использования",
   "text": "Текст",
   "text-contains-formatting": "Текст содержит форматирование. Вы хотите скопировать текст с тегами форматирования?",
   "text-copied": "Текст скопирован в буфер обмена",
@@ -1096,7 +1096,6 @@
   "view-source-title": "Показать исходный текст",
   "visibility": "Видимость",
   "visits": "{count} {count, plural, one {посещение} few {посещения} other {посещений}}",
-  "want-allow-android-google-play": "Я хочу, чтобы мой блог был виден в приложении Moera для Android, установленном из Google Play. Я разрешаю шерифу читать содержимое моего блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в Moera для Android",
   "want-delete-addon": "Вы действительно хотите удалить дополнение \"{name}\"?",
   "want-delete-draft": "Вы действительно хотите удалить черновик?",
   "want-delete-token": "Вы действительно хотите удалить токен \"{name}\"?",
