--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -17,6 +17,7 @@
   "add-me-friends": "Додати мене до друзів",
   "addons-changed-conflict": "Список додатків був змінений.",
   "advanced-options": "Розширені можливості",
+  "agree-to-sheriff-oversight": "Я погоджуюсь на <0>нагляд Шерифа</0>",
   "alert-text": "Текст попередження",
   "align": "Вирівнювання",
   "all": "Усі",
@@ -206,7 +207,7 @@
   "dont-have-account": "Немає акаунту?",
   "dont-recommend": "Не рекомендувати",
   "dont-recommend-user": "Не рекомендувати більше пости <b>{name}</b>?",
-  "do-want-allow-android-google-play": "<0>Ви бажаєте, щоб ваш блог було видно у додатку Moera для Android, встановленому із Google Play?</0> Для цього ви повинні дозволити шерифу читати вміст вашого блогу та вирішувати (згідно з правилами Google Play), які пости чи коментарі слід приховати в Moera для Android.",
+  "do-want-allow-android-google-play": "<0>Ви хочете, щоб непублічний контент вашого блогу був доступний з додатку Moera для Android, встановленого з Google Play?</0> Для цього вам потрібно дозволити Шерифу читати непублічний контент вашого блогу та вирішувати (відповідно до правил Google Play), які публікації або коментарі слід приховати в Moera для Android.",
   "download": "Завантажити",
   "downloading-image": "Завантаження картинки...",
   "do-you-have-blog": "Ви маєте блог на Moera?",
@@ -616,7 +617,7 @@
     "wow": "Ого",
     "wrong": "Неправильно"
   },
-  "read-and-agree-with": "Я прочитав і погоджуюсь з",
+  "read-and-agree-to-terms": "Я прочитав і погоджуюсь із <0>Правилами користування</0> та <1>Правилами Шерифа</1>",
   "read-more": "Читати далі...",
   "reason": "Причина",
   "recommendations": "Рекомендації",
@@ -989,7 +990,6 @@
   "superscript": "Надрядковий знак",
   "support": "Схвалюю",
   "switch-accounts": "Перемкнути акаунт",
-  "terms-and-conditions": "Правилами користування",
   "text": "Текст",
   "text-contains-formatting": "Текст містить форматування. Ви бажаєте скопіювати текст із тегами форматування?",
   "text-copied": "Текст скопійований до буфера обміну",
@@ -1096,7 +1096,6 @@
   "view-source-title": "Показати початковий текст",
   "visibility": "Видимість",
   "visits": "{count} {count, plural, one {відвідування} few {відвідування} other {відвідувань}}",
-  "want-allow-android-google-play": "Я бажаю, щоб мій блог було видно у додатку Moera для Android, що встановлений із Google Play. Я дозволяю шерифу читати вміст мого блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у Moera для Android",
   "want-delete-addon": "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
   "want-delete-draft": "Ви дійсно бажаєте видалити чернетку?",
   "want-delete-token": "Ви дійсно бажаєте видалити токен \"{name}\"?",
