Added quick sign-up mode.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -16,6 +16,7 @@
   "add-me-friend-group": "Add me to the group of friends \"{group}\"",
   "add-me-friends": "Add me to friends",
   "addons-changed-conflict": "List of add-ons has been changed.",
+  "advanced": "Advanced",
   "advanced-options": "Advanced options",
   "agree-to-sheriff-oversight": "I agree to <0>Sheriff oversight</0>",
   "alert-text": "Alert text",
@@ -69,6 +70,7 @@
   "bold": "Bold",
   "bottom": "Bottom",
   "bulleted-list": "Bulleted list",
+  "by-creating-account-agree-to-terms": "By creating the account you confirm that you read and agree to the <0>Terms and Conditions</0> and <1>Sheriff Policy</1>",
   "cancel": "Cancel",
   "cancel-request": "Cancel the request",
   "cannot-resolve-name ": "Cannot resolve name:",
@@ -571,6 +573,7 @@
   "provider": "Provider",
   "provider-setting": "(provider setting)",
   "qr-code": "QR Code",
+  "quick-sign-up": "Quick Sign-Up",
   "quote": "Quote",
   "quote-copied": "Quote copied to the clipboard",
   "reached-bottom": "You've reached the bottom",
