--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -16,6 +16,7 @@
   "add-me-friend-group": "Dodaj mnie do grupy znajomych \"{group}\"",
   "add-me-friends": "Dodaj mnie do znajomych",
   "addons-changed-conflict": "Lista dodatków została zmieniona.",
+  "advanced": "Zaawansowane",
   "advanced-options": "Opcje zaawansowane",
   "agree-to-sheriff-oversight": "Zgadzam się na <0>nadzór Szeryfa</0>",
   "alert-text": "Tekst alertu",
@@ -69,6 +70,7 @@
   "bold": "Pogrubienie",
   "bottom": "Dół",
   "bulleted-list": "Lista punktowana",
+  "by-creating-account-agree-to-terms": "Tworząc konto potwierdzasz, że przeczytałeś i zgadzasz się z <0>Regulaminem</0> oraz <1>Zasadami Szeryfa</1>",
   "cancel": "Anuluj",
   "cancel-request": "Anuluj żądanie",
   "cannot-resolve-name ": "Nie można rozwiązać nazwy:",
@@ -571,6 +573,7 @@
   "provider": "Dostawca",
   "provider-setting": "(ustawienia dostawcy)",
   "qr-code": "Kod QR",
+  "quick-sign-up": "Szybka rejestracja",
   "quote": "Cytat",
   "quote-copied": "Cytat skopiowany do schowka",
   "reached-bottom": "Dotarłeś na dół",
