--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -16,6 +16,7 @@
   "add-me-friend-group": "Добавить меня в группу друзей \"{group}\"",
   "add-me-friends": "Добавить меня в друзья",
   "addons-changed-conflict": "Список дополнений был изменён.",
+  "advanced": "Дополнительно",
   "advanced-options": "Расширенные возможности",
   "agree-to-sheriff-oversight": "Я согласен на <0>надзор Шерифа</0>",
   "alert-text": "Текст предупреждения",
@@ -69,6 +70,7 @@
   "bold": "Полужирный",
   "bottom": "В начало",
   "bulleted-list": "Маркированный список",
+  "by-creating-account-agree-to-terms": "Создавая аккаунт, вы подтверждаете, что прочли и согласны с <0>Правилами использования</0> и <1>Правилами шерифа</1>",
   "cancel": "Отмена",
   "cancel-request": "Отменить запрос",
   "cannot-resolve-name ": "Не удалось опознать имя:",
@@ -571,6 +573,7 @@
   "provider": "Провайдер",
   "provider-setting": "(устанавливается провайдером)",
   "qr-code": "QR-код",
+  "quick-sign-up": "Быстрая регистрация",
   "quote": "Цитата",
   "quote-copied": "Цитата скопирована в буфер обмена",
   "reached-bottom": "Вы пришли к началу",
