--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -16,6 +16,7 @@
   "add-me-friend-group": "Додати мене до групи друзів \"{group}\"",
   "add-me-friends": "Додати мене до друзів",
   "addons-changed-conflict": "Список додатків був змінений.",
+  "advanced": "Додатково",
   "advanced-options": "Розширені можливості",
   "agree-to-sheriff-oversight": "Я погоджуюсь на <0>нагляд Шерифа</0>",
   "alert-text": "Текст попередження",
@@ -69,6 +70,7 @@
   "bold": "Жирний",
   "bottom": "У початок",
   "bulleted-list": "Маркований список",
+  "by-creating-account-agree-to-terms": "Створюючи обліковий запис, ви підтверджуєте, що прочитали і погоджуєтесь із <0>Правилами користування</0> та <1>Правилами Шерифа</1>",
   "cancel": "Відмінити",
   "cancel-request": "Скасувати запит",
   "cannot-resolve-name ": "Не вдалося розпізнати ім'я:",
@@ -571,6 +573,7 @@
   "provider": "Провайдер",
   "provider-setting": "(встановлюється провайдером)",
   "qr-code": "QR-код",
+  "quick-sign-up": "Швидка реєстрація",
   "quote": "Цитата",
   "quote-copied": "Цитата скопійована у буфер обміну",
   "reached-bottom": "Ви дійшли до початку",
