MnemonicPage core functionality (without connecting it to other pages).

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -137,6 +137,7 @@
   "content-hidden-in-google-play": "All content is hidden in Android (Google Play)",
   "content-not-accessible-android": "This content is not accessible on Android",
   "content-unhidden-in-google-play": "All content is unhidden in Android (Google Play)",
+  "continue": "Continue",
   "continue-reading": "Continue Reading →",
   "copy": "Copy",
   "copy-embedding-video-code": "Copy \"Embed video\" code from YouTube, Rumble etc. and paste it here",
@@ -563,6 +564,7 @@
     "signed": "Logged in",
     "subscribed": "Subscriptions"
   },
+  "print": "Print",
   "privacy": "Privacy",
   "profile": "Profile",
   "profile-edited-conflict": "Profile was edited by somebody.",
@@ -964,6 +966,7 @@
   "signature-verification-in-progress": "Signature verification in progress",
   "sign-up": "Sign Up",
   "size": "Size",
+  "skip-for-now": "Skip for now",
   "sorry-you-banned": "Sorry, you cannot perform this operation, because the author has banned you.",
   "source-format": {
     "html": "HTML",
@@ -1119,12 +1122,14 @@
   "why-not-set-avatar": "<0>Haven't set an avatar yet?</0> Your avatar will make it easy for others to recognize you in discussions.",
   "why-not-set-full-name": "<0>Haven't set a full name yet?</0> A beautiful full name will appear in your posts and comments instead of the username. For example, instead of <1>{name}</1>, it will say <1>{full}</1>. It can be your real name or any other name you like. And you can change it at any time.",
   "width": "Width",
+  "words-copied": "Words copied to the clipboard",
   "write-anything": "Write anything...",
   "write-comment": "Write a comment...",
   "write-down-secret-words": "<0>Write down the secret words.</0> With these words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. Copy these words and store them in a safe place. Delete them from the server so they remain only with you.",
-  "write-down-words": "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>You will need them for any operations with the name ‘{name}’.</2>",
+  "write-down-words": "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>With these secret words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. For better security, it is not recommended to store them on the server.</2>",
   "write-new-post": "Write a new post",
   "written-down-delete-words": "Written down. Delete the words from the server",
+  "written-down-words": "I've written down the secret words",
   "wrong-reset-token": "Wrong secret code",
   "year-ago": "A year ago",
   "yes": "Yes",
