--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -137,6 +137,7 @@
   "content-hidden-in-google-play": "Cała treść jest ukryta na Androidzie (Google Play)",
   "content-not-accessible-android": "Ten kontent nie jest dostępny na Androidzie",
   "content-unhidden-in-google-play": "Cała treść jest ukryta na Androidzie (Google Play) jest widoczna na Androidzie (Google Play)",
+  "continue": "Kontynuuj",
   "continue-reading": "Kontynuuj czytanie →",
   "copy": "Kopiuj",
   "copy-embedding-video-code": "Skopiuj kod „Osadź wideo” z YouTube, Rumble itp. i wklej go tutaj",
@@ -563,6 +564,7 @@
     "signed": "Zalogowany",
     "subscribed": "Subskrypcje"
   },
+  "print": "Drukuj",
   "privacy": "Prywatność",
   "profile": "Profil",
   "profile-edited-conflict": "Profil został edytowany przez kogoś innego.",
@@ -964,6 +966,7 @@
   "signature-verification-in-progress": "Trwa weryfikacja podpisu",
   "sign-up": "Zarejestruj się",
   "size": "Rozmiar",
+  "skip-for-now": "Pomiń teraz",
   "sorry-you-banned": "Niestety nie możesz wykonać tej operacji, ponieważ autor Cię zbanował.",
   "source-format": {
     "html": "HTML",
@@ -1119,12 +1122,14 @@
   "why-not-set-avatar": "<0>Jeszcze nie ustawiłeś awatara?</0> Dzięki awatarowi łatwo cię rozpoznają w dyskusjach.",
   "why-not-set-full-name": "<0>Jeszcze nie ustawiłeś pełnego imienia?</0> Piękne pełne imię będzie pojawiać się w twoich postach i komentarzach zamiast nazwy użytkownika. Na przykład, zamiast <1>{name}</1>, będzie napisane <1>{full}</1>. To może być twoje prawdziwe imię lub dowolne inne, które ci się podoba. I możesz je zmienić w dowolnym momencie.",
   "width": "Szerokość",
+  "words-copied": "Słowa skopiowane do schowka",
   "write-anything": "Napisz cokolwiek...",
   "write-comment": "Napisz komentarz...",
   "write-down-secret-words": "<0>Zapisz tajne słowa.</0> Dzięki tym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Skopiuj te słowa i umieść je w bezpiecznym miejscu. Usuń je z serwera, aby pozostały tylko u ciebie.\n",
-  "write-down-words": "<0>Proszę zapisać, zapisać w pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli stracisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</1><2>Będziesz ich potrzebować do wszystkich operacji związanych z nazwą ‘{name}’.</2>",
+  "write-down-words": "<0>Proszę zapisać, zapisać do pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli zgubisz te słowa, nie będą mogły zostać odzyskane, a ty całkowicie stracisz kontrolę nad zarejestrowaną nazwą.</1><2>Dzięki tym tajnym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Dla lepszego bezpieczeństwa, nie zaleca się ich przechowywania na serwerze.</2>",
   "write-new-post": "Napisz nowy post",
   "written-down-delete-words": "Zapisano. Usuń słowa z serwera",
+  "written-down-words": "Zapisałem tajne słowa",
   "wrong-reset-token": "Nieprawidłowy kod sekretny",
   "year-ago": "Rok temu",
   "yes": "Tak",
