--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -137,6 +137,7 @@
   "content-hidden-in-google-play": "Весь контент приховано у Android (Google Play)",
   "content-not-accessible-android": "Цей контент недоступний на Android",
   "content-unhidden-in-google-play": "Весь контент розкрито у Android (Google Play)",
+  "continue": "Продовжити",
   "continue-reading": "Читати далі →",
   "copy": "Копіювати",
   "copy-embedding-video-code": "Скопіюйте код \"Вбудувати відео\" з YouTube, Rumble тощо та вставте його тут",
@@ -563,6 +564,7 @@
     "signed": "Зареєстрованим",
     "subscribed": "Підписки"
   },
+  "print": "Друк",
   "privacy": "Конфіденційність",
   "profile": "Профіль",
   "profile-edited-conflict": "Профіль був кимось відредагований.",
@@ -964,6 +966,7 @@
   "signature-verification-in-progress": "Йде перевірка підпису",
   "sign-up": "Зареєструватися",
   "size": "Розмір",
+  "skip-for-now": "Пропустити поки що",
   "sorry-you-banned": "На жаль, ви не можете здійснити цю операцію, оскільки автор забанив вас.",
   "source-format": {
     "html": "HTML",
@@ -1119,12 +1122,14 @@
   "why-not-set-avatar": "<0>Ще не встановили аватар?</0> По аватару вас буде легко впізнати в обговореннях.",
   "why-not-set-full-name": "<0>Ще не встановили повне ім'я?</0> Гарне повне ім'я буде з'являтися у ваших постах і коментарях замість імені користувача. Наприклад, замість <1>{name}</1> буде написано <1>{full}</1>. Це може бути ваше справжнє ім'я або будь-яке інше, яке вам подобається. І його можна буде змінити в будь-який момент.",
   "width": "Ширина",
+  "words-copied": "Слова скопійовані до буфера обміну",
   "write-anything": "Пишіть що завгодно...",
   "write-comment": "Напишіть коментар...",
   "write-down-secret-words": "<0>Запишіть секретні слова.</0> За допомогою цих слів ви зможете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Скопіюйте ці слова та покладіть у безпечне місце. Видаліть їх із сервера, щоб вони залишилися тільки у вас.",
-  "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова і зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх неможливо буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</1><2>Вони вам знадобляться для будь-яких операцій з ім'ям ‘{name}’.</2>",
+  "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова та зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над зареєстрованим ім'ям.</1><2>За допомогою цих секретних слів ви можете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Для кращої безпеки не рекомендується зберігати їх на сервері.</2>",
   "write-new-post": "Написати новий пост",
   "written-down-delete-words": "Записано. Видали слова з сервера",
+  "written-down-words": "Я записав секретні слова",
   "wrong-reset-token": "Невірний секретний код",
   "year-ago": "Рік тому",
   "yes": "Так",
