--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -137,6 +137,7 @@
   "content-hidden-in-google-play": "Весь контент скрыт в Android (Google Play)",
   "content-not-accessible-android": "Этот контент недоступен на Android",
   "content-unhidden-in-google-play": "Весь контент раскрыт в Android (Google Play)",
+  "continue": "Продолжить",
   "continue-reading": "Читать дальше →",
   "copy": "Копировать",
   "copy-embedding-video-code": "Скопируйте код «Встроить видео» с YouTube, Rumble и т.д. и вставьте его сюда",
@@ -563,6 +564,7 @@
     "signed": "Зарегистрированным",
     "subscribed": "Подписки"
   },
+  "print": "Печать",
   "privacy": "Конфиденциальность",
   "profile": "Профиль",
   "profile-edited-conflict": "Профиль был кем-то отредактирован.",
@@ -964,6 +966,7 @@
   "signature-verification-in-progress": "Идёт проверка подписи",
   "sign-up": "Регистрация",
   "size": "Размер",
+  "skip-for-now": "Пропустить сейчас",
   "sorry-you-banned": "К сожалению, вы не можете выполнить эту операцию, так как автор забанил вас.",
   "source-format": {
     "html": "HTML",
@@ -1119,12 +1122,14 @@
   "why-not-set-avatar": "<0>Ещё не установили аватарку?</0> По аватарке вас будет легко узнать в обсуждениях.",
   "why-not-set-full-name": "<0>Ещё не установили полное имя?</0> Красивое полное имя будет появляться в ваших постах и комментариях вместо имени пользователя. Например, вместо <1>{name}</1> будет написано <1>{full}</1>. Это может быть ваше настоящее имя или любое другое, которое вам нравится. И его можно будет сменить в любой момент.",
   "width": "Ширина",
+  "words-copied": "Слова скопированы в буфер обмена",
   "write-anything": "Пишите что угодно...",
   "write-comment": "Напишите комментарий...",
   "write-down-secret-words": "<0>Запишите секретные слова.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Скопируйте эти слова и положите в безопасное место. Удалите их с сервера, чтобы они остались только у вас.",
-  "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните их в безопасном месте.</0><1>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</1><2>Они вам понадобятся для любых операций с именем ‘{name}’.</2>",
+  "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните в безопасном месте.</0><1>Если вы потеряете эти слова, их невозможно будет восстановить, и вы полностью потеряете контроль над своим зарегистрированным именем.</1><2>С помощью этих секретных слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Для большей безопасности не рекомендуется хранить их на сервере.</2>",
   "write-new-post": "Написать новый пост",
   "written-down-delete-words": "Записано. Удали слова с сервера",
+  "written-down-words": "Я записал секретные слова",
   "wrong-reset-token": "Неправильный секретный код",
   "year-ago": "Год назад",
   "yes": "Да",
