Connect MnemonicPage to other pages. More detailed set of actions for MnemonicPage and MnemonicDialog.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -460,8 +460,8 @@
   "my-profile": "Mój profil",
   "name": "Nazwa",
   "name-already-taken": "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur_42')",
+  "named-key": "Klucz nazwy",
   "name-help": "Nazwa musi mieć 4-120 znaków. Dozwolone są wszystkie znaki, z wyjątkiem białych znaków i interpunkcji. Dozwolona interpunkcja: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
-  "name-key": "Klucz imienny",
   "name-not-allowed": "Nazwa jest niedozwolona",
   "name-operation-started": "Rozpoczęto operację nazwy",
   "name-or-node-url-not-valid": "Nazwa bloga lub URL jest nieprawidłowa",
