--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -460,8 +460,8 @@
   "my-profile": "Мій профіль",
   "name": "Ім'я",
   "name-already-taken": "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
+  "named-key": "Іменний ключ",
   "name-help": "Ім'я повинно містити від 4 до 120 символів. Усі символи дозволені, окрім пробілів та розділових знаків. Дозволені розділові знаки: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
-  "name-key": "Іменний ключ",
   "name-not-allowed": "Неприпустиме ім'я",
   "name-operation-started": "Операцію над ім'ям запущено",
   "name-or-node-url-not-valid": "Неправильне ім'я або URL блога",
