--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -460,8 +460,8 @@
   "my-profile": "My Profile",
   "name": "Name",
   "name-already-taken": "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
+  "named-key": "Named Key",
   "name-help": "The name must be 4-120 characters long. All characters are allowed, except whitespace and punctuation. Allowed punctuation: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
-  "name-key": "Name Key",
   "name-not-allowed": "Name is not allowed",
   "name-operation-started": "Name operation started",
   "name-or-node-url-not-valid": "Blog name or URL is not valid",
