--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -460,8 +460,8 @@
   "my-profile": "Мой профиль",
   "name": "Имя",
   "name-already-taken": "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
+  "named-key": "Именной ключ",
   "name-help": "Имя должно быть длиной 4-120 символов. Разрешены все символы, кроме пробелов и знаков препинания. Разрешенные знаки препинания: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
-  "name-key": "Именной ключ",
   "name-not-allowed": "Недопустимое имя",
   "name-operation-started": "Операция над именем запущена",
   "name-or-node-url-not-valid": "Неверное имя или URL блога",
