Printing, copying and simplified structure in MnemonicDialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -206,6 +206,7 @@
   "donate": "Donate",
   "donate-to-recipient": "Donate to <0>{recipientName}</0>",
   "donations-android-prohibited": "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
+  "done": "Done",
   "dont-ask-again": "Don't ask again",
   "dont-ask-next-time": "Don't ask next time",
   "dont-have-account": "Don't have an account?",
@@ -504,7 +505,6 @@
   "notify-about-update": "Notify followers about the update",
   "notify-followers": "Notify followers",
   "not-matter": "Does not matter",
-  "not-now": "Not now",
   "not-publish-my-complaint": "Please, do not publish my complaint",
   "not-received-email": "Have not receive the e-mail?",
   "not-show-complaints": "Do not show complaints",
@@ -1125,10 +1125,9 @@
   "words-copied": "Words copied to the clipboard",
   "write-anything": "Write anything...",
   "write-comment": "Write a comment...",
-  "write-down-secret-words": "<0>Write down the secret words.</0> With these words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. Copy these words and store them in a safe place. Delete them from the server so they remain only with you.",
+  "write-down-secret-words": "<0>Please write down, save to a file, or print the secret words and keep them in a safe place.</0> With these words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. For better security, it is not recommended to store them on the server.",
   "write-down-words": "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>With these secret words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. For better security, it is not recommended to store them on the server.</2>",
   "write-new-post": "Write a new post",
-  "written-down-delete-words": "Written down. Delete the words from the server",
   "written-down-words": "I've written down the secret words",
   "wrong-reset-token": "Wrong secret code",
   "year-ago": "A year ago",
