--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -206,6 +206,7 @@
   "donate": "Wspomóż",
   "donate-to-recipient": "Wspomóż <0>{recipientName}</0>",
   "donations-android-prohibited": "Funkcja dotacji jest zabroniona w aplikacjach Android pobranych z Google Play zgodnie z <0>Polityką Płatności Google Play</0>.<1/><2/>Proszę użyć klienta Moera web do tego celu.",
+  "done": "Gotowe",
   "dont-ask-again": "Nie pytaj ponownie",
   "dont-ask-next-time": "Nie pytaj następnym razem",
   "dont-have-account": "Nie masz konta?",
@@ -504,7 +505,6 @@
   "notify-about-update": "Powiadom obserwujących o aktualizacji",
   "notify-followers": "Powiadom obserwujących",
   "not-matter": "Nie ma znaczenia",
-  "not-now": "Nie teraz",
   "not-publish-my-complaint": "Proszę nie publikować mojej skargi",
   "not-received-email": "Nie otrzymano e-maila?",
   "not-show-complaints": "Nie pokazuj skarg",
@@ -1125,10 +1125,9 @@
   "words-copied": "Słowa skopiowane do schowka",
   "write-anything": "Napisz cokolwiek...",
   "write-comment": "Napisz komentarz...",
-  "write-down-secret-words": "<0>Zapisz tajne słowa.</0> Dzięki tym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Skopiuj te słowa i umieść je w bezpiecznym miejscu. Usuń je z serwera, aby pozostały tylko u ciebie.\n",
+  "write-down-secret-words": "<0>Proszę zapisać, zapisać do pliku lub wydrukować tajne słowa i przechowywać je w bezpiecznym miejscu.</0> Dzięki tym słowom można, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Dla lepszego bezpieczeństwa, nie zaleca się ich przechowywania na serwerze.",
   "write-down-words": "<0>Proszę zapisać, zapisać do pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli zgubisz te słowa, nie będą mogły zostać odzyskane, a ty całkowicie stracisz kontrolę nad zarejestrowaną nazwą.</1><2>Dzięki tym tajnym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Dla lepszego bezpieczeństwa, nie zaleca się ich przechowywania na serwerze.</2>",
   "write-new-post": "Napisz nowy post",
-  "written-down-delete-words": "Zapisano. Usuń słowa z serwera",
   "written-down-words": "Zapisałem tajne słowa",
   "wrong-reset-token": "Nieprawidłowy kod sekretny",
   "year-ago": "Rok temu",
