--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -206,6 +206,7 @@
   "donate": "Донат",
   "donate-to-recipient": "Донаты для <0>{recipientName}</0>",
   "donations-android-prohibited": "Функция донатов запрещена в приложениях для Android, загруженных из Google Play, в соответствии с <0>Политикой платежей Google Play</0>.<1/><2/> Пожалуйста, используйте веб-клиент Moera для этого.",
+  "done": "Готово",
   "dont-ask-again": "Больше не спрашивать",
   "dont-ask-next-time": "Не спрашивать следующий раз",
   "dont-have-account": "Нет аккаунта?",
@@ -504,7 +505,6 @@
   "notify-about-update": "Уведомить подписчиков об обновлении",
   "notify-followers": "Уведомить подписчиков",
   "not-matter": "Не имеет значения",
-  "not-now": "Не сейчас",
   "not-publish-my-complaint": "Пожалуйста, не публикуйте мою жалобу",
   "not-received-email": "Не получили письмо?",
   "not-show-complaints": "Не показывать жалобы",
@@ -1125,10 +1125,9 @@
   "words-copied": "Слова скопированы в буфер обмена",
   "write-anything": "Пишите что угодно...",
   "write-comment": "Напишите комментарий...",
-  "write-down-secret-words": "<0>Запишите секретные слова.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Скопируйте эти слова и положите в безопасное место. Удалите их с сервера, чтобы они остались только у вас.",
+  "write-down-secret-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте секретные слова и храните их в безопасном месте.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Для большей безопасности не рекомендуется хранить их на сервере.",
   "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните в безопасном месте.</0><1>Если вы потеряете эти слова, их невозможно будет восстановить, и вы полностью потеряете контроль над своим зарегистрированным именем.</1><2>С помощью этих секретных слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Для большей безопасности не рекомендуется хранить их на сервере.</2>",
   "write-new-post": "Написать новый пост",
-  "written-down-delete-words": "Записано. Удали слова с сервера",
   "written-down-words": "Я записал секретные слова",
   "wrong-reset-token": "Неправильный секретный код",
   "year-ago": "Год назад",
