--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -206,6 +206,7 @@
   "donate": "Донат",
   "donate-to-recipient": "Донати для <0>{recipientName}</0>",
   "donations-android-prohibited": "Функція донатів заборонена в додатках для Android, завантажених з Google Play, відповідно до <0>Політики платежів Google Play</0>.<1/><2/> Будь ласка, використовуйте веб-клієнт Moera для цього.",
+  "done": "Готово",
   "dont-ask-again": "Більше не питати",
   "dont-ask-next-time": "Не питати наступного разу",
   "dont-have-account": "Немає акаунту?",
@@ -504,7 +505,6 @@
   "notify-about-update": "Повідомити підписникам про оновлення",
   "notify-followers": "Повідомити підписникам",
   "not-matter": "Не має значення",
-  "not-now": "Не зараз",
   "not-publish-my-complaint": "Будь ласка, не публікуйте мою скаргу",
   "not-received-email": "Не отримали листа?",
   "not-show-complaints": "Не показувати скарги",
@@ -1125,10 +1125,9 @@
   "words-copied": "Слова скопійовані до буфера обміну",
   "write-anything": "Пишіть що завгодно...",
   "write-comment": "Напишіть коментар...",
-  "write-down-secret-words": "<0>Запишіть секретні слова.</0> За допомогою цих слів ви зможете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Скопіюйте ці слова та покладіть у безпечне місце. Видаліть їх із сервера, щоб вони залишилися тільки у вас.",
+  "write-down-secret-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте секретні слова та зберігайте їх у безпечному місці.</0> За допомогою цих слів ви можете, у разі необхідності, перенести свій блог на інший сервер, зберігаючи ім'я та всі соціальні зв'язки. Для кращої безпеки не рекомендується зберігати їх на сервері.",
   "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова та зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над зареєстрованим ім'ям.</1><2>За допомогою цих секретних слів ви можете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Для кращої безпеки не рекомендується зберігати їх на сервері.</2>",
   "write-new-post": "Написати новий пост",
-  "written-down-delete-words": "Записано. Видали слова з сервера",
   "written-down-words": "Я записав секретні слова",
   "wrong-reset-token": "Невірний секретний код",
   "year-ago": "Рік тому",
